[package]
name = "data_tracker"
description = "tracks changes to data and notifies listeners"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/astraw/data_tracker"
repository = "https://github.com/astraw/data_tracker"
documentation = "https://docs.rs/data_tracker/"
keywords = ["change", "notify", "track", "reactive", "watch"]
readme = "README.md"

[dependencies]

[features]
default = []

no_send = []